spacing issue

--- a/DiceGame/style.css
+++ b/DiceGame/style.css
@@ -1,9 +1,19 @@
+body {
+  background: linear-gradient(135deg, #1e3c72, #2a5298);
+  color: #ffffff;
+  font-family: "Press Start 2P", cursive;
+  height: 100svh;
+  margin: 0;
+}
+
 .header {
-  padding-top: 100px;
+  margin-top: 20vw;
   display: flex;
+  padding: 0px 20px;
   justify-content: center;
   align-items: start;
-  gap: 20px;
+  gap: 10px;
+  margin-bottom: 20vw;
 }
 
 #result {
@@ -43,13 +53,11 @@ button {
   position: absolute;
   bottom: 100px;
 }
-
 .btncontainer {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 .footer {
   text-align: center;
   position: fixed;
@@ -70,16 +78,6 @@ button {
 
 /* funky background for a minigame with fixed screen height
  */
-body {
-  background: linear-gradient(135deg, #1e3c72, #2a5298);
-  color: #ffffff;
-  font-family: "Press Start 2P", cursive;
-  height: 100vh;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
 
 .trophy {
   width: 100px;
